Suposta atualização no vite :D , e mudança no overflow, alteramos os width de 100vw para 100%, aparentemente resolveu o problema de rolagem da pagina

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -5,7 +5,7 @@
     justify-content: space-around;
 
     height: auto;
-    width: 100vw;
+    width: 100%;
     padding: 13px 0px;
     background-color: #fdc55e;
     border-radius: 0px 0px 30px 30px;
