--- a/src/pages/home/styles/Section1.css
+++ b/src/pages/home/styles/Section1.css
@@ -4,14 +4,14 @@
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
+    width: 100%;
 
     position: relative;
     z-index: 0;
     margin-top: -25px;
 
     & img {
-        width: 100vw;
+        width: 100%;
     }
 }
 
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
+    width: 100%;
     height: auto;
     padding: 25px 0px;
     background-color: #fdc55e;
