--- a/src/pages/home/styles/Section2.css
+++ b/src/pages/home/styles/Section2.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
+    width: 100%;
     padding: 60px 0px;
     gap: 30px;
     margin-top: -30px;
