--- a/src/pages/home/styles/Section3.css
+++ b/src/pages/home/styles/Section3.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
+    width: 100%;
     padding: 0px 0px 30px 0px;
 
     & img {
