--- a/src/pages/home/styles/Section4.css
+++ b/src/pages/home/styles/Section4.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 100vw;
+    width: 100%;
     margin-top: 18px;
     margin-bottom: 10px;
 }
