--- a/src/pages/home/styles/Section5.css
+++ b/src/pages/home/styles/Section5.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 90vw;
+    width: 90%;
     max-width: 1200px;
     height: 100px;
     border-radius: 20px;
